@@ -17,6 +17,7 @@ include::include.adoc[]
 * Add support for Groovy-4-style range expressions spockIssue:1956[]
 * Improve `@Timeout` extension will now use virtual threads if available spockPull:1986[]
 * Improve mock argument matching, types constraints or arguments in interactions can now handle primitive types like `_ as int` spockIssue:1974[]
+* Improve `verifyEach` to accept an optional second index parameter for the assertion block closure spockPull:2043[]
 * Support ContextClassLoader when loading optional classes via `ReflectionUtil` spockPull:1995[]
 ** This enables loading of optional classes in e.g. OSGi environments
 * `EmbeddedSpecRunner` and `EmbeddedSpecCompiler` now support the construction with a custom `ClassLoader` spockPull:1988[]
